--- a/Group3project/index.html
+++ b/Group3project/index.html
@@ -572,8 +572,7 @@ Artificial intelligence and machine learning enginee.</p>
                                     <h3>Subscribe</h3>
                                     <span class="animate-border border-black"></span>
                                 </div>
-                                <p><!-- Don’t miss to subscribe to our new feeds, kindly fill the form below. -->
-                                Reference site about Lorem Ipsum, giving information on its origins, as well.</p>
+                              
                                 <form action="#">
                                     <div class="form-row">
                                         <div class="col dk-footer-form">
@@ -603,7 +602,7 @@ Artificial intelligence and machine learning enginee.</p>
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <span>Copyright © 2019, All Right Reserved Seobin</span>
+                        <span>Copyright © 2019, All Right Reserved Group 3 project/span>
                     </div>
                     <!-- End Col -->
                     <div class="col-md-6">
