--- a/Group3project/index.html
+++ b/Group3project/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-6">
                     <h1>AMB. LATIM DATHONG</h1>
                     <div class="page-scroll">
-                        <p class="job-title">DEPUTY MINISTER FOR ADMINISTRATION</p>
+                        <p class="job-title">DEPUTY MINISTER FOR ADMINISTRATION Liberia</p>
                         <a href="#contact" class="btn btn-fill">Contact me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
